# file-manager-admin

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: AGENTS.md  env.py
app/: AGENTS.md  config.py  constants.py  database.py  dependencies.py  main.py
app/api/: AGENTS.md  auth.py  files.py  pages.py  parse.py  settings.py
app/models/: AGENTS.md  tables.py
app/schemas/: AGENTS.md  file.py
app/services/: AGENTS.md  auth_service.py  background_sync.py  file_service.py  parse_service.py  session_service.py  settings_service.py
app/templates/: AGENTS.md  account.html  auth_base.html  base.html  index.html  login.html  settings.html  signup.html
app/templates/components/: AGENTS.md  filter_toolbar.html  header.html  sidebar.html
app/templates/partials/: AGENTS.md  _base_shared.html  account_create_form.html  account_edit_modal.html  account_modal.html  account_user_row.html  account_user_table.html  edit_modal.html  empty_state.html  file_row.html  file_table.html  pagination.html  parse_status.html  settings_form.html  settings_save_feedback.html  upload_modal.html
tests/: AGENTS.md  conftest.py  test_auth.py  test_background_sync.py  test_file_api.py  test_parse_api.py
